# currency-converter

./: .gitignore  README.md  package.json  pyproject.toml
backend/: .env
backend/app/: main.py
backend/app/api/: currency.py  user.py
backend/app/core/: config.py
backend/app/schemas/: currency.py
backend/app/services/: converter.py
backend/tests/: test_currency_api.py
frontend/currency-converter/: index.html  index2.html  package-lock.json  style.css
frontend/currency-converter/src/: App.jsx
frontend/currency-converter/src/components/: ConverterForm.jsx  Header.jsx  ResultBox.jsx
frontend/currency-converter/src/styles/: ConverterForm.css  ResultBox.css  global.css
